--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -1,9 +1,9 @@
 <div class="row">
-  <div class="col-xs-12"><img src="" alt="" class="img-responsive"></div>
+  <div class="col-xs-12"><img style='max-width: 300px;' [src]="recipe.imagePath" alt="{{recipe.name}}" class="img-responsive"></div>
 </div>
 <div class="row">
   <div class="col-xs-12">
-    <h1>Name Recipe</h1>
+    <h1>{{recipe.name}}</h1>
   </div>
 </div>
 <div class="row">
@@ -24,7 +24,7 @@
 
 <div class="row">
   <div class="col-xs-12">
-      Description
+      {{recipe.description}}
   </div>
 </div>
 <div class="row">
