--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,11 +1,13 @@
+<ng-template appPlaceholder></ng-template>
 <div class="row">
   <div class="col-xs-12">
     <h1 style="text-align: center; font-weight: bold;">{{isLoginMode ? 'Login':'Sign Up'}}</h1>
   </div>
   <div class="col-xs-12 col-md-6 col-md-offset-3">
-    <div class="alert alert-danger" *ngIf="error" >
+    <!-- <div class="alert alert-danger" *ngIf="error" >
         <p>{{error}}</p>
-    </div>
+    </div> -->
+    <!-- <app-alert [message]="error" *ngIf="error" (closee)="onHandleError()" ></app-alert> -->
     <div *ngIf="isLoading" style="text-align: center;">
       <app-loading-spinner></app-loading-spinner>
     </div>
@@ -21,7 +23,7 @@
       </div>
       <div>
         <button [disabled]= "!authForm.valid" class="btn btn-primary" type="submit">{{isLoginMode ? 'Login':'Sign Up'}}</button> |
-        <button class="btn btn-primary" type="button" (click)="onSwitchMode()">
+        <button class="btn btn-warning" type="button" (click)="onSwitchMode()">
           Switch to {{isLoginMode ?'Sign Up':'Login'}}
         </button>
       </div>
