--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a href="" class="navbar-brand">Recipe Book</a>
+      <span  class="navbar-brand">Recipe Book</span>
     </div>
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
